--- a/.github/workflows/build-wireguard-go-linux.yml
+++ b/.github/workflows/build-wireguard-go-linux.yml
@@ -23,12 +23,12 @@ jobs:
           ls -al /go/bin
           # rm -rf /usr/local/go
 
-      - name: Remove system Go from PATH
-        run: |
-          echo "Current PATH: $PATH"
-          export PATH=$(echo "$PATH" | sed -e 's|:/usr/local/go/bin||g')
-          echo "Modified PATH: $PATH"
-          echo "PATH after modification: $PATH" >> $GITHUB_ENV
+      # - name: Remove system Go from PATH
+      #   run: |
+      #     echo "Current PATH: $PATH"
+      #     export PATH=$(echo "$PATH" | sed -e 's|:/usr/local/go/bin||g')
+      #     echo "Modified PATH: $PATH"
+      #     echo "PATH after modification: $PATH" >> $GITHUB_ENV
 
       - name: Install Go
         uses: actions/setup-go@v5
@@ -45,6 +45,10 @@ jobs:
           which go
           go version
           echo $PATH
+          ls -al /go
+          ls -al /go/bin
+          unset GOROOT
+          unset GOTOOLDIR
           ./wireguard/build-wireguard-go.sh
 
       - name: Upload artifacts
