--- a/.github/workflows/build-wireguard-go-deb.yml
+++ b/.github/workflows/build-wireguard-go-deb.yml
@@ -17,14 +17,14 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v5
         with:
-          # With "stable" here build fails with version mismatch "1.23.1 vs
-          # 1.23.0". So setting it to explicit version as a quick hack to
-          # unblock release builds
-          go-version: 1.23.0
+          go-version: "stable"
           cache-dependency-path: "**/go.sum"
 
       - name: Build wireguard
-        run: ./wireguard/build-wireguard-go.sh
+        run: |
+          unset GOROOT
+          unset GOTOOLDIR
+          ./wireguard/build-wireguard-go.sh
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
