--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -119,7 +119,6 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-
       - name: Setup MSBuild.exe
         if: contains(matrix.os, 'windows')
         uses: microsoft/setup-msbuild@v2
@@ -128,6 +127,8 @@ jobs:
         if: matrix.target != 'ios' && matrix.target != 'android'
         shell: bash
         run: |
+          unset GOROOT
+          unset GOTOOLDIR
           ./wireguard/build-wireguard-go.sh
 
       - name: Build wireguard (iOS)
