--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -114,6 +114,7 @@ jobs:
           go-version: "stable"
 
       - name: Override GOROOT and GOTOOLDIR
+        if: contains(matrix.os, 'ubuntu')
         run: |
           echo "Setting correct GOROOT and GOTOOLDIR"
           unset GOROOT
