--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -113,12 +113,22 @@ jobs:
         with:
           go-version: "stable"
 
+      - name: Override GOROOT and GOTOOLDIR
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          echo "Setting correct GOROOT and GOTOOLDIR"
+          unset GOROOT
+          unset GOTOOLDIR
+          export GOROOT=$(go env GOROOT)
+          export GOTOOLDIR=$(go env GOTOOLDIR)
+          echo "GOROOT=$GOROOT" >> $GITHUB_ENV
+          echo "GOTOOLDIR=$GOTOOLDIR" >> $GITHUB_ENV
+
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         if: contains(matrix.os, 'macos') || contains(matrix.os, 'windows')
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-
 
       - name: Setup MSBuild.exe
         if: contains(matrix.os, 'windows')
