--- a/nym-vpn-x/src-tauri/Cargo.toml
+++ b/nym-vpn-x/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 build-info-build = "0.0.38"
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
+tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
 tokio = { version = "1.39", features = ["rt", "sync", "time", "fs", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
