--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ lifecycle-compose = "2.8.5"
 activityCompose = "1.9.2"
 composeBom = "2024.09.00"
 datastorePreferences = "1.1.1"
+relinker = "1.4.5"
 securityCrypto = "1.1.0-alpha06"
 sentryOpentelemetryCoreVersion = "7.14.0"
 timber = "5.0.1"
@@ -75,6 +76,7 @@ converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.r
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
+relinker = { module = "com.getkeepsafe.relinker:relinker", version.ref = "relinker" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterMoshi" }
 
 #barcode
