--- a/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
+++ b/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - 'nym-vpn-core/**/Cargo.lock'
       - 'nym-vpn-core/**/Cargo.toml'
+      - '.github/workflows/ci-nym-vpn-core-cargo-deny.yml'
 jobs:
   cargo-deny:
     runs-on: arc-ubuntu-22.04-dind
