--- a/.github/workflows/create-release-nym-vpn-core.yml
+++ b/.github/workflows/create-release-nym-vpn-core.yml
@@ -23,12 +23,16 @@ jobs:
           else
             echo "User ${{ github.actor }} is not an admin."
             echo "is_admin=false" >> $GITHUB_ENV
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   create_release:
     if: needs.check_admin_permission.outputs.is_admin == 'true'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout Repository
@@ -39,25 +43,24 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Create a new branch
+      - name: Setup branch name
         id: create_branch
         run: |
           BRANCH_NAME="release/nym-vpn-core-$(date +'%Y%m%d%H%M%S')"
-          git checkout -b $BRANCH_NAME
+          # git checkout -b $BRANCH_NAME
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_ENV
 
-      - name: Run release script
+      - name: Run create-nym-vpn-core-release.sh
         run: |
           ./scripts/create-nym-vpn-core-release.sh --yes
 
-      - name: Update nym-vpn-apple to latest core
+      - name: Run update-nym-vpn-apple-to-latests-core.sh
         run: |
           ./scripts/update-nym-vpn-apple-to-latests-core.sh
           git diff
-          git add -u
-          git commit -m "Update Info.plist"
+          git commit -a -m "Update Info.plist"
 
-      - name: Run bump to dev version script
+      - name: Run bump-nym-vpn-core-to-next-dev-version.sh
         run: |
           ./scripts/bump-nym-vpn-core-to-next-dev-version.sh --yes
 
@@ -73,6 +76,7 @@ jobs:
           branch: ${{ env.branch_name }}
           title: "Release: ${{ env.branch_name }}"
           body: "Automated PR for the release."
+          draft: true
 
       # - name: Push the new branch and tags
       #   run: |
