--- a/.github/workflows/create-release-nym-vpn-core.yml
+++ b/.github/workflows/create-release-nym-vpn-core.yml
@@ -26,8 +26,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  create_release:
+  create_version:
     needs: check_admin_permission
+    outputs:
+      branch_name: ${{ steps.create_branch.outputs.branch_name }}
     if: needs.check_admin_permission.outputs.is_admin == 'true'
     runs-on: ubuntu-latest
     permissions:
@@ -47,8 +49,8 @@ jobs:
         id: create_branch
         run: |
           BRANCH_NAME="release-nym-vpn-core-$(date +'%Y%m%d%H%M%S')"
-          # git checkout -b $BRANCH_NAME
-          echo "branch_name=$BRANCH_NAME" >> $GITHUB_ENV
+          git checkout -b $BRANCH_NAME
+          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
       - name: Install cargo-edit, cargo-get
         run: |
@@ -58,53 +60,68 @@ jobs:
         run: |
           ./scripts/create-nym-vpn-core-release.sh --yes
 
-      # - name: Run update-nym-vpn-apple-to-latests-core.sh
-      #   run: |
-      #     ./scripts/update-nym-vpn-apple-to-latest-core.sh
-      #     git diff
-      #     git commit -a -m "Update Info.plist"
+      - name: Push commit with version bump to new branch
+        run: |
+          git push origin HEAD:${{ steps.create_branch.outputs.branch_name }}
+
+  update_nym_vpn_apple:
+    needs: create_version
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.create_version.outputs.branch_name }}
+
+      - name: Set up Git user
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Cache cargo packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: Install cargo-edit, cargo-get
+        run: |
+          cargo install --locked cargo-edit cargo-get
+
+      - name: Run update-nym-vpn-apple-to-latest-core.sh
+        run: |
+          ./scripts/update-nym-vpn-apple-to-latest-core.sh
+          git diff
+          git commit -a -m "Update Info.plist"
+          git push
+
+  create_pull_request:
+    needs: [create_version, update_nym_vpn_apple]
+    if: needs.check_admin_permission.outputs.is_admin == 'true'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.create_version.outputs.branch_name }}
+
+      - name: Install cargo-edit, cargo-get
+        run: |
+          cargo install --locked cargo-edit cargo-get
 
       - name: Run bump-nym-vpn-core-to-next-dev-version.sh
         run: |
           ./scripts/bump-nym-vpn-core-to-next-dev-version.sh --yes
 
-      # - name: Commit bumped version
-      #   run: |
-      #     git add .
-      #     git commit -m "Bump version to next dev version"
-          # git push origin ${{ env.branch_name }}
-
-      - name: git status
-        run: |
-          git status
-          git diff
-
-      - name: Open a Pull Request
+      - name: Create PR
         uses: peter-evans/create-pull-request@v7
         with:
-          branch: ${{ env.branch_name }}
-          title: "Release: ${{ env.branch_name }}"
+          ref: ${{ needs.create_version.outputs.branch_name }}
+          title: "Release: ${{ needs.create_version.outputs.branch_name }}"
           body: "Automated PR for the release."
           base: "main"
           draft: true
-
-      # - name: Push the new branch and tags
-      #   run: |
-      #     git push origin ${{ env.branch_name }}
-      #     git push --tags
-
-      # - name: Commit and push the bumped version
-      #   run: |
-      #     git add .
-      #     git commit -m "Bump version to next dev version"
-      #     git push origin ${{ env.branch_name }}
-
-      # - name: Update PR with bumped version
-      #   uses: peter-evans/create-pull-request@v7
-      #   with:
-      #     branch: ${{ env.branch_name }}
-      #     title: "Release: ${{ env.branch_name }} (Bumped)"
-      #     body: "Automated PR with the bumped version."
-      #     committer: "GitHub <noreply@github.com>"
-      #     author: "GitHub Actions <actions@github.com>"
-
