--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.36.0"
-agp = "8.7.0-rc01"
+agp = "8.7.0"
 coreSplashscreen = "1.0.1"
 detektRulesCompose = "1.4.0"
 jna = "5.15.0"
@@ -10,12 +10,12 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-materialIconsExtended = "1.7.2"
-navigationCompose = "2.8.1"
+materialIconsExtended = "1.7.3"
+navigationCompose = "2.8.2"
 hiltNavigationCompose = "1.2.0"
 lifecycle-compose = "2.8.6"
 activityCompose = "1.9.2"
-composeBom = "2024.09.02"
+composeBom = "2024.09.03"
 datastorePreferences = "1.1.1"
 relinker = "1.4.5"
 securityCrypto = "1.1.0-alpha06"
