--- a/nym-vpn-app/package.json
+++ b/nym-vpn-app/package.json
@@ -32,14 +32,14 @@
     "@headlessui/react": "^2.1.2",
     "@mui/base": "^5.0.0-beta.39",
     "@sentry/react": "^8.22.0",
-    "@tauri-apps/api": ">=2.0.0-rc.0",
-    "@tauri-apps/plugin-clipboard-manager": "^2.0.0-rc.1",
-    "@tauri-apps/plugin-dialog": "^2.0.0-rc",
-    "@tauri-apps/plugin-notification": "^2.0.0-rc",
-    "@tauri-apps/plugin-os": "^2.0.0-rc",
-    "@tauri-apps/plugin-process": "^2.0.0-rc",
-    "@tauri-apps/plugin-shell": "^2.0.0-rc",
-    "@tauri-apps/plugin-updater": "^2.0.0-rc",
+    "@tauri-apps/api": "^2.0.1",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0",
+    "@tauri-apps/plugin-notification": "^2.0.0",
+    "@tauri-apps/plugin-os": "^2.0.0",
+    "@tauri-apps/plugin-process": "^2.0.0",
+    "@tauri-apps/plugin-shell": "^2.0.0",
+    "@tauri-apps/plugin-updater": "^2.0.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.2.14",
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
-    "@tauri-apps/cli": ">=2.0.0-rc.0",
+    "@tauri-apps/cli": "^2.0.1",
     "@types/eslint__js": "^8.42.3",
     "@types/lodash-es": "^4.17.0",
     "@types/node": "^22.5.0",
