--- a/nym-vpn-app/src-tauri/Cargo.toml
+++ b/nym-vpn-app/src-tauri/Cargo.toml
@@ -13,11 +13,11 @@ repository = "https://github.com/nymtech/nym-vpn-client"
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "2.0.0", features = [] }
 build-info-build = "0.0.39"
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
+tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
 tokio = { version = "1.39", features = ["rt", "sync", "time", "fs", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -51,16 +51,16 @@ nym-config = { git = "https://github.com/nymtech/nym", rev = "fabd48b" }
 nym-vpn-proto = { path = "../../nym-vpn-core/crates/nym-vpn-proto" }
 
 # tauri deps
-tauri-plugin-shell = "2.0.0-rc"
-tauri-plugin-os = "2.0.0-rc"
-tauri-plugin-notification = "2.0.0-rc"
-tauri-plugin-dialog = "2.0.0-rc"
-tauri-plugin-process = "2.0.0-rc"
-tauri-plugin-clipboard-manager = "2.1.0-beta.7"
-tauri-plugin-updater = "2.0.0-rc"
+tauri-plugin-shell = "2.0.1"
+tauri-plugin-os = "2.0.1"
+tauri-plugin-notification = "2.0.1"
+tauri-plugin-dialog = "2.0.1"
+tauri-plugin-process = "2.0.1"
+tauri-plugin-clipboard-manager = "2.0.1"
+tauri-plugin-updater = "2.0.1"
 
 [target."cfg(windows)".dependencies]
-windows = { version = "0.57.0", features = [
+windows = { version = "0.58.0", features = [
     "Win32_System_Console",
     "Win32_Foundation",
 ] }
