--- a/nym-vpn-android/app/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/app/src/main/AndroidManifest.xml
@@ -26,19 +26,9 @@
 		android:largeHeap="true"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.AppSplashScreen"
+		android:theme="@style/Theme.NymVPN"
 		tools:node="merge"
 		tools:targetApi="33">
-		<activity
-			android:name=".ui.SplashActivity"
-			android:exported="true"
-			android:theme="@style/Theme.AppSplashScreen">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-				<action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
-			</intent-filter>
-		</activity>
 		<activity
 			android:name="com.journeyapps.barcodescanner.CaptureActivity"
 			android:screenOrientation="portrait"
@@ -51,6 +41,9 @@
 			android:screenOrientation="portrait"
 			android:windowSoftInputMode="adjustResize">
 			<intent-filter android:autoVerify="true">
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
