--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
 accompanist = "0.36.0"
 agp = "8.7.1"
-coreSplashscreen = "1.0.1"
 detektRulesCompose = "1.4.0"
 ipaddress = "5.5.1"
 jna = "5.15.0"
@@ -11,12 +10,13 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-materialIconsExtended = "1.7.3"
-navigationCompose = "2.8.2"
+lottieCompose = "6.3.0"
+materialIconsExtended = "1.7.4"
+navigationCompose = "2.8.3"
 hiltNavigationCompose = "1.2.0"
 lifecycle-compose = "2.8.6"
-activityCompose = "1.9.2"
-composeBom = "2024.09.03"
+activityCompose = "1.9.3"
+composeBom = "2024.10.00"
 datastorePreferences = "1.1.1"
 relinker = "1.4.5"
 securityCrypto = "1.1.0-alpha06"
@@ -35,17 +35,16 @@ moshiKotlinCodegen = "1.15.1"
 converterMoshi = "2.11.0"
 zxingAndroidEmbedded = "4.3.0"
 
-gradlePlugins-licensee = "1.11.0"
+gradlePlugins-licensee = "1.12.0"
 gradlePlugins-detekt = "1.23.7"
 gradlePlugins-gross = "0.4.2"
-gradlePlugins-sentry = "4.11.0"
+gradlePlugins-sentry = "4.12.0"
 material = "1.12.0"
 gradlePlugins-ktlint="12.1.1"
 gradlePlugins-grgit="5.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
 androidx-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiautomator" }
@@ -73,6 +72,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 #retrofit/moshi
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
