--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
+        os: [arc-ubuntu-22.04, custom-runner-mac-m1]
         target: [native]
         include:
           - os: arc-ubuntu-22.04
@@ -40,10 +40,6 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
         if: contains(matrix.os, 'ubuntu')
-
-      - name: Support longpaths on windows
-        if: contains(matrix.os, 'windows')
-        run: git config --system core.longpaths true
 
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -94,11 +90,6 @@ jobs:
           elif ${{ contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1') }}; then
             triplet=universal-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-          elif ${{ contains(matrix.os, 'windows') }}; then
-            triplet=x86_64-pc-windows-msvc
-            echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib -Clink-args=/LIBPATH:${GITHUB_WORKSPACE}/build/lib/x64-Debug" >> $GITHUB_ENV
-            mkdir -p ${GITHUB_WORKSPACE}/build/lib/
           else
             echo " ✗ unknown platform/arch [${{ matrix.os }}]"
             exit 1
@@ -116,48 +107,9 @@ jobs:
           version: "21.12" # 3.21.12: the version on ubuntu 24.04. Don't change this!
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install build tools
-        if: contains(matrix.os, 'windows')
-        shell: cmd
-        run: |
-          winget install --disable-interactivity --id=Microsoft.VisualStudio.2022.BuildTools --override "--wait --passive --add Microsoft.VisualStudio.Workload.VCTools;includeRecommended"
-          if %ERRORLEVEL% EQU -1978335189 (
-            exit /b 0
-          )
-
-      - name: Update path with vctools
-        if: contains(matrix.os, 'windows')
-        shell: pwsh
-        run: |
-          $buildtoolspath = "$Env:ProgramFiles (x86)/Microsoft Visual Studio/2022/BuildTools"
-          $msbuildpath = "$buildtoolspath/MSBuild/Current/Bin"
-          echo "Add msbuild dir to path: $msbuildpath"
-          Add-Content $env:GITHUB_PATH "$msbuildpath"
-
-          $msvctoolspath = "$buildtoolspath/VC/Tools/MSVC"
-          $contents = Get-ChildItem $msvctoolspath | Select-Object -First 1
-          $subdir = $contents[0].Name
-          $vctoolsdir = "$msvctoolspath/$subdir/bin/Hostx64/x64"
-          echo "Add vctools dir to path: $vctoolsdir"
-          Add-Content $env:GITHUB_PATH "$vctoolsdir"
-
-      - name: Setup msys2
-        if: contains(matrix.os, 'windows')
-        uses: msys2/setup-msys2@v2
-        with:
-          update: false
-          msystem: MINGW64
-          install: mingw-w64-x86_64-clang
-
       - name: Build wireguard
-        if: matrix.target != 'ios' && matrix.target != 'android' && !contains(matrix.os, 'windows')
+        if: matrix.target != 'ios' && matrix.target != 'android'
         shell: bash
-        run: |
-          ./wireguard/build-wireguard-go.sh
-
-      - name: Build wireguard (Windows)
-        if: contains(matrix.os, 'windows')
-        shell: msys2 {0}
         run: |
           ./wireguard/build-wireguard-go.sh
 
@@ -171,66 +123,17 @@ jobs:
         if: matrix.target == 'android'
         run: ./wireguard/libwg/build-android.sh
 
-      - name: Download wintun.zip and winpcap.zip
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          curl --output ${GITHUB_WORKSPACE}/wintun.zip https://www.wintun.net/builds/wintun-0.14.1.zip
-          curl --output ${GITHUB_WORKSPACE}/winpcap.zip https://www.winpcap.org/install/bin/WpdPack_4_1_2.zip
-
-      - name: Unzip wintun.zip and winpcap.zip
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          unzip ${GITHUB_WORKSPACE}/wintun.zip
-          unzip ${GITHUB_WORKSPACE}/winpcap.zip
-
-      - name: Move wintun.dll and packet.lib to build directory
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          mv ${GITHUB_WORKSPACE}/wintun/bin/amd64/wintun.dll ${GITHUB_WORKSPACE}/build/lib/
-          mv ${GITHUB_WORKSPACE}/WpdPack/Lib/x64/Packet.lib ${GITHUB_WORKSPACE}/build/lib/
-
-      - name: Checkout mullvad libs for Windows
-        if: contains(matrix.os, 'windows')
-        uses: actions/checkout@v4
-        with:
-          repository: nymtech/nym-vpn-mullvad-libs
-          ref: main
-          path: "nym-vpn-mullvad-libs"
-          submodules: true
-
-      - name: Build winfw.dll from mullvad
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          cd ${GITHUB_WORKSPACE}/nym-vpn-mullvad-libs
-          ./build-windows-modules.sh
-
-      - name: Move winfw.dll to build directory
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          mv ${GITHUB_WORKSPACE}/nym-vpn-mullvad-libs/windows/winfw/bin/x64-Debug ${GITHUB_WORKSPACE}/build/lib/
-
       - name: rustfmt check
         working-directory: nym-vpn-core
         run: |
           cargo fmt --check
 
       - name: Build
-        if: matrix.target != 'android' && matrix.target != 'ios' && !contains(matrix.os, 'windows')
+        if: matrix.target != 'android' && matrix.target != 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo build --verbose
-
-      - name: Build (Windows)
-        if: contains(matrix.os, 'windows')
-        working-directory: nym-vpn-core
-        run: |
-          cargo build --verbose --workspace --exclude nym-gateway-probe
-
+      
       - name: Build (Android)
         if: matrix.target == 'android'
         working-directory: nym-vpn-core
@@ -302,16 +205,10 @@ jobs:
         run: exit 1
 
       - name: Run tests (Linux, macOS)
-        if: matrix.target != 'android' && matrix.target != 'ios' && !contains(matrix.os, 'windows')
+        if: matrix.target != 'android' && matrix.target != 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo test --verbose
-
-      - name: Run tests (Windows excluding gateway probe)
-        if: contains(matrix.os, 'windows')
-        working-directory: nym-vpn-core
-        run: |
-          cargo test --verbose --workspace --exclude nym-gateway-probe
 
       - name: Clippy
         working-directory: nym-vpn-core
